Implemented aos animations in hero section

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["BookAir"],
-  "author": "John Samuel",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "aos": "^2.3.4"
